fixed text wrapping and relative container size

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -2,10 +2,18 @@
     color:black;
 }
 
+body {
+    background-image: url("https://wallpapercave.com/wp/wp4047726.jpg");
+    /* background-size: contain; */
+    background-repeat: no-repeat;
+    /* background-position: center; */
+    min-height: 100vh;
+}
+
 .wallpaper {
     position: fixed;
-    height: auto;
-    width: fit-content;
+    /* height: auto; */
+    width: 100%;    
 }
 
 .navbar-brand {
@@ -23,16 +31,19 @@
     position: relative;
 }
 
-.img-fluid {
-    max-width: 100%;
-    height: auto;
+.img-responsive {
+    max-width: 50%;
+    height: 50%;
+    width: 50%;
+    float: left;
+    margin: 20px 10px;
 }
 
 .footer {
     width:100%;
     bottom: 0;
     background-color: rgb(53, 53, 53);
-    position: absolute;
+    position: fixed;
 }
 
 .text-center text-muted {
